# exonum-wasmi

./: .env  .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  build.sh  test.sh
ci/: install_wasm.sh
client/: Cargo.toml
client/src/: main.rs
cryptocurrency/: Cargo.toml  build.sh  cryptocurrency.wasm  cryptocurrency.wat
cryptocurrency/src/: lib.rs
executor/: Cargo.toml
executor/src/: lib.rs
exowasm-executor-test/: Cargo.toml  README.md  build.rs
exowasm-executor-test/src/: lib.rs
exowasm-executor-test/wasm-kernel/: Cargo.toml  build.sh  wasm_kernel.wasm
exowasm-executor/src/: lib.rs
exowasm-std/: Cargo.toml
exowasm-std/src/: ext.rs  lib.rs
node/: Cargo.toml
node/src/: lib.rs  main.rs  protocol.rs  service.rs
src/: call.rs  client.rs  deploy.rs  main.rs  messages.rs  node.rs  service.rs  wasm.rs
test/: Cargo.toml
test/src/: lib.rs
wasm-kernel/: Cargo.toml  build.sh  wasm_kernel.wasm  wasm_kernel.wat
wasm-kernel/src/: ext.rs  lib.rs
