[package]
name = "exonum-wasm"
version = "0.1.0"
authors = ["Denis Kolodin <denis.kolodin@xdev.re>"]

[dependencies]
dotenv = "0.10.1"
exonum = "0.5.1"
wasmi = { git = "https://github.com/pepyakin/wasmi" }
iron = "0.6.0"
bodyparser = "0.8.0"
router = "0.6.0"
serde = "1.0"
serde_json = "1.0"
# TODO: move to a separate crate
reqwest = "0.8.4"
failure = "0.1"
clap = "2.29"
rand = "0.4.2"

[[bin]]
name = "node"
path = "src/node.rs"

[[bin]]
name = "client"
path = "src/client.rs"
