[package]
name = "wasm-kernel"
version = "0.1.0"
authors = ["Sergey Pepyakin <s.pepyakin@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Allocator crate,
# We don't need all the features, we just need bare-bones allocator.
wee_alloc = { git = "https://github.com/fitzgen/wee_alloc.git", rev = "05d369a", default-features = false }
# memcpy, etc
rlibc = "1.0"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
